skiplang/compiler/invalid_tests/typechecking/allow_tracked_call_method.sk
// @allow_tracked_call requires the annotated method to be untracked
class C() {
  @allow_tracked_call
  fun m(): String {
    "Fail\n"
  }
}

untracked fun main(): void {
  print_raw(C().m())
}
